# sundials-6.5.1

./: CMakeLists.txt  requirements-manylinux.txt  setup.cfg  setup.py
include/sundials/: Config.h.in  sundials_config.h
include/sundials/pybind/: Attributes.h
python/src/sundials/: __init__.py
sundials.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
