[metadata]
name = sundials
version = 6.5.1
author = The Sundials Authors, Rahul Bhadani
author_email = rahulbhadani@arizona.edu
description = Sundials Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rahulbhadani/sundials
project_urls =
    Bug Tracker = https://github.com/rahulbhadani/sundials/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
